# mxsm

./: .gitignore  LICENSE.md  README.md  pyproject.toml
examples/: demo.s  prod.tab.json
examples/hello_world/: hello_world.mx11
mxsm/: __init__.py  assembler.py  cli.py  disassembler.py  production_tree.py  tokenizer.py
