[tool.poetry]
name = "mxsm"
version = "0.2"
description = "MX Cross Assembler"
authors = ["Anubhav Mattoo"]
license = "GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
auto-click = "^0.0.11"
toml = "^0.10.2"

[tool.poetry.scripts]
mxsm = "mxsm.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
