[tool.poetry]
name = "mxsm"
version = "0.2"
description = "MX Cross Assembler"
authors = ["Anubhav Mattoo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
auto-click = "^0.0.11"

[tool.poetry.scripts]
mxsm = "mxsm.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
