[tool.poetry]
name = "mxsm"
version = "0.3"
description = "MX Cross Assembler"
authors = ["Anubhav Mattoo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
auto-click = "^0.0.11"
bnf = "^1.0.4"
anytree = "^2.13.0"
click = "^8.1.8"

[tool.poetry.scripts]
mxsm = "mxsm.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
